Update Jesus text

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="keywords" content="vcard, resume, personal, portfolio, cv, card, responsive" />
-        <meta name="description" content="vCard / Resume / Personal / Portfolio Template" />
-        <meta name="author" content="cosmos-themes" />
+        <meta name="keywords" content="jesus, comedy, personal, card, responsive" />
+        <meta name="description" content="vCard / Jesus Never / Comedy" />
+        <meta name="author" content="jesus" />
 
         <!--Page Title-->
-        <title>Andrew Pederson Portfolio</title>
+        <title>Jesus Never</title>
 
         <!--Plugins Css-->
         <link rel="stylesheet" href="css/plugins.css">
@@ -34,7 +34,7 @@
         <div class="preloader">
             <div class="loader">
                 <!--Your Name-->
-                <h4>Andrew Pederson</h4>
+                <h4>Jesus Christ</h4>
                 <span></span>
                 <span></span>
                 <span></span>
@@ -61,8 +61,8 @@
                     <!--Main Header-->
                     <div class="header-main" data-simplebar>
                         <div class="image-container">
-                            <h2 class="header-name">Andrew Pederson</h2>
-                            <img src="./img/IMG_0532.jpg" alt="profile-pic">
+                            <h2 class="header-name">Jesus Christ</h2>
+                            <img src="./img/background/JESUS_QUARANTINE.jpg" alt="profile-pic">
                         </div>
 
                         <!--Nav Menus-->
@@ -106,17 +106,17 @@
 
                     <div class="banner-content">
                         <!--Banner Text-->
-                        <h1 class="mb-20">Andrew <span>Pederson</span></h1>
+                        <h1 class="mb-20">Jesus <span>Christ</span></h1>
 
                         <!--Animated Text-->
                         <p class="cd-headline clip is-full-width">
-                        <span>I am a </span>
+                        <span>Jesus Never... </span>
                         <span class="cd-words-wrapper">
-                            <b class="is-visible">Senior Quality Assurance Engineer</b>
-                            <b>Web Developer</b>
-                            <b>Photographer</b>
-                            <b>Musician</b>
-                            <b>Freelancer</b>
+                            <b class="is-visible">made it rain</b>
+                            <b>had a hangover</b>
+                            <b>questioned his sexuality</b>
+                            <b>was an olympic diver</b>
+                            <b>had a mid-life crisis</b>
                         </span>
                         </p>
 
