--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div id="main" class="site-main">
 
             <!--Banner Section Start-->
-            <section id="home" class="banner-section pt-page" style="background-image: url('img/background/home-bg.jpg')">
+            <section id="home" class="banner-section pt-page" style="background-image: url('img/Jesus/boyband.jpg')">
 
                 <div class="banner-content">
                     <!--Banner Text-->
