--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Main Styles Css-->
     <link rel="stylesheet" href="css/style-dark.css">
     <!--Color Css-->
-    <link rel="stylesheet" href="css/blue-color.css">
+    <link rel="stylesheet" href="css/red-color.css">
 
     <!--Modernizr Js-->
     <script src="js/modernizr.js"></script>
