--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Plugins Css-->
     <link rel="stylesheet" href="css/plugins.css">
     <!--Main Styles Css-->
-    <link rel="stylesheet" href="css/style-dark.css">
+    <link rel="stylesheet" href="css/style-light.css">
     <!--Color Css-->
     <link rel="stylesheet" href="css/red-color.css">
 
