Jesus Never test

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <div class="preloader">
         <div class="loader">
             <!--Your Name-->
-            <h4>Jesus Christ NEVER EVER</h4>
+            <h4>Jesus Christ NEVER EVER</h4> 
+
+            <!--temp page spinner-->
+            
             <span></span>
             <span></span>
             <span></span>
@@ -61,7 +64,7 @@
                 <!--Main Header-->
                 <div class="header-main" data-simplebar>
                     <div class="image-container">
-                        <h2 class="header-name">Jesus Christ</h2>
+                        <h2 class="header-name">Jesus Never...</h2>
                         <img src="./img/background/JESUS_QUARANTINE.jpg" alt="profile-pic">
                     </div>
 
