--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Plugins Css-->
     <link rel="stylesheet" href="css/plugins.css">
     <!--Main Styles Css-->
-    <link rel="stylesheet" href="css/style-light.css">
+    <link rel="stylesheet" href="css/style-dark.css">
     <!--Color Css-->
     <link rel="stylesheet" href="css/red-color.css">
 
@@ -34,7 +34,7 @@
     <div class="preloader">
         <div class="loader">
             <!--Your Name-->
-            <h4>Jesus Christ NEVER EVER</h4> 
+            <h4>Jesus never...</h4> 
 
             <!--temp page spinner-->
             
