--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 <!--Mobile Header-->
                 <div class="header-mobile">
                     <a class="header-toggle"><i class="fas fa-bars"></i></a>
-                    <h2>Jesus Christ TEMP //remove me</h2>
+                    <h3>Temp Mobile Header</h3>
                 </div>
 
                 <!--Main Header-->
                 <div class="header-main" data-simplebar>
                     <div class="image-container">
-                        <h2 class="header-name">Jesus Never...</h2>
+                        <h2 class="header-name">Jesus never entered this site</h2>
                         <img src="./img/background/JESUS_QUARANTINE.jpg" alt="profile-pic">
                     </div>
 
