--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="preloader">
         <div class="loader">
             <!--Your Name-->
-            <h4>Jesus never...</h4> 
+            <h4>...</h4> 
 
             <!--temp page spinner-->
             
@@ -64,7 +64,7 @@
                 <!--Main Header-->
                 <div class="header-main" data-simplebar>
                     <div class="image-container">
-                        <h2 class="header-name">Jesus never entered this site</h2>
+                        <h2 class="header-name">placeholder</h2>
                         <img src="./img/background/JESUS_QUARANTINE.jpg" alt="profile-pic">
                     </div>
 
@@ -105,11 +105,11 @@
 
                 <div class="banner-content">
                     <!--Banner Text-->
-                    <h1 class="mb-20">Jesus <span>Christ</span></h1>
+                    <h1 class="mb-20">Jesus <span>NEVER</span></h1>
 
                     <!--Animated Text-->
                     <p class="cd-headline clip is-full-width">
-                        <span>Jesus Never... </span>
+                        <span>... </span>
                         <span class="cd-words-wrapper">
                             <b class="is-visible">made it rain</b>
                             <b>had a hangover</b>
