--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div id="main" class="site-main">
 
             <!--Banner Section Start-->
-            <section id="home" class="banner-section pt-page" style="background-image: url('img/Jesus/boyband.jpg')">
+            <section id="home" class="banner-section pt-page" style="background-image: url('img/Jesus/Jesus_Diver_Edited.jpg')">
 
                 <div class="banner-content">
                     <!--Banner Text-->
