--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
                         <!--Personal Info-->
                         <div class="col-lg-4">
                             <div class="about-info">
-                                <h3 class="mb-20">Personal Information Section?</h3>
+                                <h3 class="mb-20">Why does Andrew create so many fucking divs in his code???  Here is yet another one. NEAT</h3>
                                 <ul>
-                                    <li><span class="title">Not sure this span </span><span class="value">is needed</span></li>
+                                    <li><span class="title">Not sure this <span> </span><span class="value">is needed</span></li>
                                 </ul>
                                 <!-- <div class="weeklyComic-button mt-30">
                                     <a class="btn-main" href="#">Download Today's Comic</a>
                                 </div> -->
                                 <div class="WeeklyComic">
-                                    <a href="./img/WeeklyComic.pdf" target="_blank">Download This Weeks Comic</a>
+                                    <a href="./img/WeeklyComic.pdf" target="_blank">Download This Weeks Comic (clickable to members sign up page to download the comic or somthing</a>
                                 </div>
                             </div>
                         </div>
