--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="preloader">
         <div class="loader">
             <!--Your Name-->
-            <h4>...</h4> 
+            <h4>Something witty goes here</h4> 
 
             <!--temp page spinner-->
             
